sumo/tests/traci/VariableSubscription/errors/UnknownVariable/testclient_out.traci
TraCITestClient output file. Date: Mon Apr 19 09:31:30 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SubscribeVariable>:
  domID=212 objID=0 with 1 variables
.. Answered with error to command (212), [description: Could not add subscription (Get Vehicle Variable: unsupported variable specified).]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
